<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DifficultyActivity">

    <ImageView
        android:id="@+id/img_difficulty"
        android:layout_width="164dp"
        android:layout_height="157dp"
        android:scaleType="centerCrop"
        android:src="@drawable/difficulty_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_difficulty" />

    <TextView
        android:id="@+id/txt_difficulty"
        android:layout_width="303dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/diff_title"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_easy"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:text="@string/txt_easy"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_difficulty" />

    <Button
        android:id="@+id/bt_hard"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="90dp"
        android:text="@string/txt_hard"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_difficulty"
        app:layout_constraintVertical_bias="0.292" />

    <Button
        android:id="@+id/bt_medium"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:layout_marginTop="9dp"
        android:text="@string/txt_medium"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_easy" />

</androidx.constraintlayout.widget.ConstraintLayout>